# Dz1

./: CMakeLists.txt  README.md  check_assignment.sh
.cache/clangd/index/: blowfish.cpp.178712FDD9D1A91C.idx  blowfish.h.A313047FC6B5EBDB.idx  crypto_tests.cpp.8AF4E01DD5A8B94E.idx  data_processor.cpp.CEF9F4D5D067DA5B.idx  data_processor.h.98FC27A8F22C0962.idx  knn_classifier.cpp.60C5231C0A882831.idx  knn_classifier.h.350859203154DF76.idx  main.cpp.0E53C9B4CA790C9A.idx  ml_tests.cpp.BE29D799D85CD6A7.idx
data/: download_dataset.py
docs/: report.html  report_ru.html
src/: main.cpp
src/crypto/: blowfish.cpp  blowfish.h
src/ml/: data_processor.cpp  data_processor.h  knn_classifier.cpp  knn_classifier.h
src/tests/: crypto_tests.cpp  ml_tests.cpp
visualization/: results.html  results_ru.html
